@@ -1,16 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST gimp-lqr-plugin-0.7.1.tar.bz2 783423 RMD160 d445204a295e4f9d5a5fc0f5fb7081c60bfc8a43 SHA1 cc7ae00ae4ba144e3f5bab6cc62f43e12cdee3f4 SHA256 6298183e31d992e789592e754069ae8176af192fb5c78a36d12b77d6aa119e0e
-EBUILD gimp-lqr-0.7.1.ebuild 707 RMD160 97abf4cec4cc92b49c3143839e3f2c6a9f160bb5 SHA1 18a3a8f5fcb496bcf48e080e4b6719352bcc7c7f SHA256 d960052a5cb9efbb218c53ce4e97f8f6d2b2a3aa15ba7c52971c6441c401e1b6
-MISC ChangeLog 915 RMD160 21aa0337a350fb603025681920509c70a1c29190 SHA1 2e5401fe40d9dc5f4e214b4bffc0b2758267b1d3 SHA256 54b34d108b5c8dc42567631986d42c5961cf6955da52b51b7e7c539bac870bf4
+EBUILD gimp-lqr-0.7.1.ebuild 704 RMD160 a88b6da89f5fd5f23887fc41ec906c304cef6b64 SHA1 1153a144743cbd863d5ec5342700f9a118d7f169 SHA256 185590bb80656413e3dcff489402a1377dddecc979cfcd7481bed0006747a5dc
+MISC ChangeLog 1024 RMD160 b9e3f41f285cf8d0aa6fa0a1187ae510fd58b2dd SHA1 8d41f9ea941e75ad3c6a822807f9af293a6148dd SHA256 dea61bfbb6137e0c238984683d6a6c0794df38ce114f00e4a188b93d82f012ad
 MISC metadata.xml 238 RMD160 7b2f4e44501d009fd9989fce9d632a7ebb1086e2 SHA1 1a0fbc7c1fa7486ec4660714cb96e9c86a22013a SHA256 f5bfe7b3171e6a50ad6d8fb7da8ae5c20f228d93ecaaef9beea6a72d34be799a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk59ph8ACgkQfXuS5UK5QB1hkgP8DVVz7zY0psCwgnG3YQZrvJTb
-wjSwq04pbGgB9WndyygPZuI5qLnlhpILzpjbtvS9E6Ki5Ail82rDZr2SFkW+UPS5
-SkMKbnEvkuj4fqTvl9L9vc8LxSm5YLLXzrr9M7PnHrK3dbnQMc0LVVIX+CqiD//s
-tuD28DdxeQv9sXpDtbQ=
-=n2lc
+iQIcBAEBCgAGBQJOwu6YAAoJEPqDWhW0r/LC30AQAKAhPWueDTBk3nGWnQLNWv9R
+ZvCWyn4m0nRnI8D7a4KiIpuOxNZ0irecpKB46/5L8/2tYKE1uuNAscvU0rXWF10i
+XhU1QVAXSrtLb+p4d8M1SJS6h0EirWeLiovzW48fTXXu8tNivaNehvdmTrly8fO0
+vlM7sJhIHwFjsiH4xBzmNbaQ4inTRm/8Qrmoiu1VzG6ehvTti2B7N49TGS/T1T1Q
+BHOkT7xyrKc+gvOZFmjaB0rSnwQpfU0lcSHp798pWWYRWRafsYMzoOFYrzkKraqh
+6iA66xYnRzz0l9cTTwhifdXBKnH8GYHxj8Icvw1ZSxWkkDV9dNmktvXbI0jklYcX
+h8MqrJQbQ/NtlEMFbyLmtH/jhCDrpA9A8NaSiWtxJeOY27fRHXHaP0Qlhx5xCjXH
+dj4uAAkZxZX031lPon0jG/mgJlGq+S/obWYqJ8oa2SDbj2EHVqYUiy3frj5eAxDK
+iwxUw4zwXZhoPaGilACLP1sE7A+GwMcr3IBvVa6zeN3IlEPWLuevQxKSdG8pi1ZH
+BhHpgLHt+E1vHg5J427tfgNfwspZ5ItAA4KG97+foSRQtctrbIwzXgwuDijArPYy
+uIE570A7C9mmy+oobCskmQfhirHL3KcsGweHq6D1dzGwcFn/Q259Z8Ziob4erGaa
+BSeYVPDS/vq+RJXZJ6Fn
+=3gaU
 -----END PGP SIGNATURE-----
