@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-lqr/gimp-lqr-0.7.1.ebuild,v 1.2 2010/11/19 16:38:54 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-lqr/gimp-lqr-0.7.1.ebuild,v 1.3 2011/11/15 22:58:29 hwoarang Exp $
 
 MY_P="${PN}-plugin-${PV}"
 
@@ -10,7 +10,7 @@ SRC_URI="http://liquidrescale.wikidot.com/local--files/en:download-page-sources/
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE=""
 
 RDEPEND="media-gfx/gimp
