@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gimp-lqr
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-lqr/ChangeLog,v 1.2 2010/11/19 16:38:54 phajdan.jr Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-lqr/ChangeLog,v 1.3 2011/11/15 22:58:29 hwoarang Exp $
+
+  15 Nov 2011; Markos Chandras <hwoarang@gentoo.org> gimp-lqr-0.7.1.ebuild:
+  Stable on amd64 wrt bug #390269
 
   19 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gimp-lqr-0.7.1.ebuild:
